--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ h3{
             left: 5px;
             border-radius: 50%;
             z-index: -1;
-            transition: 1600ms ease-in;
+            transition: 1000ms;
           }
           #container .head.active {
             bottom: 82%;
@@ -113,11 +113,10 @@ h3{
           #container .pour {
             position: absolute;
             width: 20px;
-            height: 200%;
-            background: #fac92c;
-            border-radius: 20px;
+            height: 190%;
+            border-radius: 0px;
             left: 10px;
-            z-index: -1;
+            z-index: 1;
             bottom: 150%;
             transition: 300ms ease-in;
           }
