--- a/style.css
+++ b/style.css
@@ -96,26 +96,26 @@ h3{
  #container .head.active {
             bottom: 82%;
  }
-          #container .head:before,
-          #container .head:after {
-            content: '';
-            position: absolute;
-            background: #fff;
-            border-radius: 50%;
-          }
-          #container .head:before {
+ #container .head:before,
+ #container .head:after {
+  content: '';
+ position: absolute;
+  background: #fff;
+ border-radius: 50%;
+}
+#container .head:before {
             width: 30px;
             height: 30px;
             left: 50px;
             top: 15px;
-          }
-          #container .head:after {
+}
+#container .head:after {
             width: 40px;
             height: 40px;
             left: 67px;
             top: 9px;
           }
-          #container .pour {
+#container .pour {
             position: absolute;
             width: 20px;
             height: 190%;
@@ -124,19 +124,26 @@ h3{
             z-index: 1;
             bottom: 150%;
             transition: 300ms ease-in;
-          }
-        
+ }      
 .row {
     margin-left: 43%; 
 }
 
-button,#start{
+button{
     font-family: 'Permanent Marker', cursive;
 }
-
+ul{
+  list-style:none;
+}
 p,#lead, #learn, .card-body{
     font-family: 'Karla', sans-serif;
 }
+
+#results{
+  background-color:white;
+  color: black;
+}
+
 
 #section2{
   text-align: center;
@@ -145,6 +152,7 @@ p,#lead, #learn, .card-body{
 margin: auto;
 text-align: center;
 }
+
 #learnMoreJT{
     background-color: #e9aa1815;
     z-index: 2;
@@ -153,7 +161,6 @@ text-align: center;
 }
 
 .card-deck{
-    
     z-index: 2;
     position: relative;
     height: 200px;
