--- a/style.css
+++ b/style.css
@@ -1,217 +1,184 @@
-
 .jumbotron{
     
-    text-align: center;
-    display: block;
-    margin: auto;
-
-    padding-top: 45px;     
-    padding-top: 10px;
-    z-index: 3;
-
+  text-align: center;
+  display: block;
+  margin: auto;
+  padding-top: 45px;     
 }
 
 html {
-    scroll-behavior: smooth;
-  }
+  scroll-behavior: smooth;
+}
 
 .title{
-    font-size: 90px;
-    font-family: 'Permanent Marker', cursive;
+  font-size: 90px;
+  font-family: 'Permanent Marker', cursive;
 }
 h3{
-    text-align: center;
+  text-align: center;
 }
 
 #section1 {
-    height: 600px;
-  }
+  height: 600px;
+}
 
 #section2 {
- margin-top: 55px;
-        height: 600px;}
+margin-top: 55px;
+      height: 600px;}
 
- #container {
-            width: 100px;
-            height: 200px;
-            margin: 0 auto;
-            position: relative;
-            margin-top: 70px;
-          }
- #container .beer {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            background: #fac92c;
-            bottom: 0;
-            height: 0;
-            transition: 1500ms ease-in;
-          }
+#container {
+          width: 100px;
+          height: 200px;
+          margin: 0 auto;
+          position: relative;
+          margin-top: 70px;
+        }
+#container .beer {
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          background: #fac92c;
+          bottom: 0;
+          height: 0;
+          transition: 1500ms ease-in;
+        }
 #container .beer.fill {
-            height: 100%;
-          }
+          height: 100%;
+        }
 #container .beer:after {
-            content: '';
-            position: absolute;
-            width: 50%;
-            height: 100%;
-            background: #ea9602;
-            right: 0;
-          }
- #container .glass {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            border: solid 10px #e8e4d9;
-            border-top: solid 5px #e8e4d9;
-            border-bottom: solid 30px #e8e4d9;
-            border-radius: 5px;
-            transform: perspective(500px) rotateX(-30deg);
-          }
- #container .glass:before,
- #container .glass:after {
-            content: '';
-            position: absolute;
-            border-radius: 10px;
-            background: #fff;
-            width: 10px;
- }
- #container .glass:before {
-            height: 20%;
-            left: 10px;
-            top: 5%;
-            z-index: 1;
- }
+          content: '';
+          position: absolute;
+          width: 50%;
+          height: 100%;
+          background: #ea9602;
+          right: 0;
+        }
+#container .glass {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          border: solid 10px #e8e4d9;
+          border-top: solid 5px #e8e4d9;
+          border-bottom: solid 30px #e8e4d9;
+          border-radius: 5px;
+          transform: perspective(500px) rotateX(-30deg);
+        }
+#container .glass:before,
 #container .glass:after {
-            height: 70%;
-            right: 10px;
-            top: 5%;
- }
+          content: '';
+          position: absolute;
+          border-radius: 10px;
+          background: #fff;
+          width: 10px;
+}
+#container .glass:before {
+          height: 20%;
+          left: 10px;
+          top: 5%;
+          z-index: 1;
+}
+#container .glass:after {
+          height: 70%;
+          right: 10px;
+          top: 5%;
+}
 #container .head {
-            position: absolute;
-            width: 60%;
-            height: 60px;
-            background: #fff;
-            bottom: -5px;
-            left: 5px;
-            border-radius: 50%;
-            z-index: -1;
-            transition: 1000ms;
-           }
- #container .head.active {
-            bottom: 82%;
- }
- #container .head:before,
- #container .head:after {
-  content: '';
- position: absolute;
-  background: #fff;
- border-radius: 50%;
+          position: absolute;
+          width: 60%;
+          height: 60px;
+          background: #fff;
+          bottom: -5px;
+          left: 5px;
+          border-radius: 50%;
+          z-index: -1;
+          transition: 1000ms;
+         }
+#container .head.active {
+          bottom: 82%;
+}
+#container .head:before,
+#container .head:after {
+content: '';
+position: absolute;
+background: #fff;
+border-radius: 50%;
 }
 #container .head:before {
-            width: 30px;
-            height: 30px;
-            left: 50px;
-            top: 15px;
+          width: 30px;
+          height: 30px;
+          left: 50px;
+          top: 15px;
 }
 #container .head:after {
-            width: 40px;
-            height: 40px;
-            left: 67px;
-            top: 9px;
-          }
+          width: 40px;
+          height: 40px;
+          left: 67px;
+          top: 9px;
+        }
 #container .pour {
-            position: absolute;
-            width: 20px;
-            height: 190%;
-            border-radius: 0px;
-            left: 10px;
-            z-index: 1;
-            bottom: 150%;
-            transition: 300ms ease-in;
- }      
+          position: absolute;
+          width: 20px;
+          height: 190%;
+          border-radius: 0px;
+          left: 10px;
+          z-index: 1;
+          bottom: 150%;
+          transition: 300ms ease-in;
+}      
 .row {
-    margin-left: 43%; 
+  margin-left: 43%; 
 }
-
 
 button, a{
- font-family: 'Permanent Marker', cursive;
-}
-
-#peruse, #start, #getLocation, #review{
-    font-family: 'Permanent Marker', cursive;
+  font-family: 'Permanent Marker', cursive;
 }
 ul{
-  list-style:none;
+list-style:none;
 }
+p,#lead, .card-body{
+  font-family: 'Karla', sans-serif;
 
-p, #lead, .card-body{
-    font-family: 'Karla', sans-serif;
 }
 
 #results{
-  background-color: #e9aa1815;
-  color: rgb(255, 255, 255); 
-  z-index: 2;
-}
+background-color: #fff;
+color: black;
 
+}
 
 #section2{
-  text-align: center;
-  position: relative;
-  overflow: hidden;
+text-align: center;
 }
-
 .people{
 margin: auto;
 text-align: center;
 }
 
 #learnMoreJT{
-    background-color: #e9aa1815;
-    z-index: 2;
-    color: rgb(255, 255, 255); 
-    position: relative;
+  background-color: #e9aa1815;
+  z-index: 2;
+  color: rgb(255, 255, 255); 
+  position: relative;
 }
 
 .card-deck{
-    z-index: 2;
-    position: relative;
-    height: 240px;
-    width: 1200px;
-    margin: auto; 
-    background-color: #e9aa1815;
+  z-index: 2;
+  position: relative;
+  height: 200px;
+  width: 1200px;
+  margin: auto; 
 
 }
 .card{
-    background-color: #e9aa1815;
-    color: rgb(255, 255, 255); 
-    border-color: rgba(255, 255, 255, 0);
-    height: 225px;
+  background-color: #e9aa1815;
+  color: rgb(255, 255, 255); 
+  border-color: rgba(255, 255, 255, 0);
 }
 
 img{
-    height: 100px;
-    width: 100px; 
-    margin-left:35%;
-    display: inline-flex;
+  height: 100px;
+  width: 100px; 
+margin-left:35%;
+  display: flex;
 }
-.bubbles {
 
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  transform: translateZ(0);
-}
-#bubbleContainer{
-
-  position: relative;
-  overflow: hidden;
-  height:100%;
-  width:100%;
-
-}
