--- a/age.css
+++ b/age.css
@@ -14,7 +14,7 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font: inherit;
+  font-family: 'Permanent Marker', cursive;
   font-size: 100%;
   vertical-align: baseline;
 }
