--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     text-align: center;
     display: block;
     margin: auto;
-
     padding-top: 45px;     
     padding-top: 10px;
     z-index: 3;
@@ -124,7 +123,7 @@ h3{
     margin-left: 43%; 
 }
 
-#peruse, #nav, #start, #getLocation, #review{
+#peruse, #back,#nav, #start, #getLocation, #review{
     font-family: 'Permanent Marker', cursive;
 }
 ul{
@@ -179,6 +178,7 @@ text-align: center;
     color: rgb(255, 255, 255); 
     border-color: rgba(255, 255, 255, 0);
     height: 225px;
+    z-index: 2
 }
 
 img{
@@ -214,7 +214,4 @@ padding: 30px;
 }
 .review{
   display: none;
-}
-#myModal{
-  z-index: 4;
 }
